Fixed spacing on the homepage.

--- a/css/_slider-container.scss
+++ b/css/_slider-container.scss
@@ -1,7 +1,7 @@
 .tp-banner-container{
     @include wid-pos-pad();
     @media screen and (max-width: 942px){
-        padding-top: 105px !important;
+        padding-top: -2px !important;
     }
 }
 
